--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,12 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/quanlytrungtam
+#    url: jdbc:mysql://localhost:3306/quanlytrungtam
+#    username: root
+#    password: 123456
+    url: jdbc:mysql://monorail.proxy.rlwy.net:49629/railway
     username: root
-    password: 123456
+    password: eYiWXpDYGecgtqiRgXgWHNWeNiBnzvZZ
   jpa:
     show-sql: true
     hibernate:
