--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,18 +2,29 @@ server:
   port: 8080
 spring:
   datasource:
-#    url: jdbc:mysql://localhost:3306/quanlytrungtam
-#    username: root
-#    password: 123456
-    url: jdbc:mysql://monorail.proxy.rlwy.net:49629/railway
+    url: jdbc:mysql://localhost:3306/quanlytrungtam
     username: root
-    password: eYiWXpDYGecgtqiRgXgWHNWeNiBnzvZZ
+    password: 123456
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: none
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: sharenamngo@gmail.com
+    password: 10a11thanga
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 api:
   prefix: api/v1
 jwt:
   expiration: 2592000 #30 days = 30 * 24 * 60 * 60
   secretKey: 54455357342478364763268483726487236482638746283764832
+
+
+
